<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, JokerActivity!</string>
    <string name="app_name">Joker</string>
    <string name="oJasiu">O Jasiu</string>
    <string name="oBlondynkach">O Blondynkach</string>
    <string name="oStudentach">O studentach</string>
    <string name="chuckNorris">Chuck Norris</string>
    <string name="oKobietach">O kobietach</string>
    <string name="turboSuchary">Turbo Suchary</string>
    <string name="chamskie">Chamskie</string>
    <string name="zboczone">Zboczone</string>
    <string name="oZwierzetach">O zwierzętach</string>
    <string name="oFacetach">O facetach</string>
    <string name="prev">Poprzedni</string>
    <string name="next">Następny</string>
    <string name="fav">Ulubiony</string>
    <string name="menu">Powrót</string>
    <string name="joke">Kawał</string>
    <string name="category">Kategorie</string>
    <string name="nr">nr</string>
    <string name="dscp">Application background</string>
    <string name="previ">Previous joke button</string>
    <string name="favo">favourite button</string>
    <string name="kawaly">Kawały</string>
    <string name="ONas">O nas</string>
    <string name="Ustawienia">Ustawienia</string>
    <string name="FB">Polub nas na FB</string>
    <string name="Ocen">Oceń aplikację</string>
    <string name="OApk">O aplikacji</string>
    <string name="Naglowek">Nagłówek</string>
	<string name="ustawienia">Ustawienia</string>	
	<string name="ocen">Oceń</string>	
	<string name="polubnasnafb">Polub nas na FB</string>	
	<string name="onas">O nas</string>	
	<string name="socialShare">Share</string>
	<string name="zaproponujkawal">Zaproponuj kawał</string>
	<string name="ocena">0</string>
	<string name="ocenaTekst">Ocena : </string>
	<string name="losowe">Losowe</string>
	<string name="ocenianie">Spodobał Ci się kawał?</string>
	<string name="tak">Dobry</string>
	<string name="nie">Słaby</string>
	<string name="anuluj">Anuluj</string>
	<string name="toast">Toast</string>
</resources>