<?xml version="1.0" encoding="utf-8"?><TableLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:layout_gravity="top"    android:background="@drawable/jokerbckg" >    <TableRow        android:id="@+id/tableRow1"        android:layout_width="wrap_content"        android:layout_height="wrap_content" >        <LinearLayout            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:orientation="vertical" >            <ImageButton                android:id="@+id/ostudentach"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_margin="7dp"                android:layout_weight="1"                android:background="@null"                android:contentDescription="@string/oStudentach"                android:scaleType="fitCenter"                android:src="@drawable/ostudentach" />            <TextView                android:layout_width="match_parent"                android:layout_height="match_parent"                android:layout_weight="1"                android:gravity="center_horizontal"                android:text="@string/oStudentach"                android:textColor="#000000" />        </LinearLayout>        <LinearLayout            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:orientation="vertical" >            <ImageButton                android:id="@+id/oJasiu"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_margin="7dp"                android:layout_weight="1"                android:background="@null"                android:contentDescription="@string/oJasiu"                android:scaleType="fitCenter"                android:src="@drawable/johnny" />            <TextView                android:layout_width="match_parent"                android:layout_height="match_parent"                android:layout_weight="1"                android:gravity="center_horizontal"                android:text="@string/oJasiu"                android:textColor="#000000" />        </LinearLayout>        <LinearLayout            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:orientation="vertical" >            <ImageButton                android:id="@+id/ozwierzetach"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_margin="7dp"                android:layout_weight="1"                android:background="@null"                android:contentDescription="@string/oZwierzetach"                android:scaleType="fitCenter"                android:src="@drawable/ozwierzetach" />            <TextView                android:layout_width="match_parent"                android:layout_height="match_parent"                android:layout_weight="1"                android:gravity="center_horizontal"                android:text="@string/oZwierzetach"                android:textColor="#000000" />        </LinearLayout>    </TableRow>    <TableRow        android:id="@+id/tableRow2"        android:layout_width="wrap_content"        android:layout_height="wrap_content" >        <LinearLayout            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:orientation="vertical" >            <ImageButton                android:id="@+id/oKobietach"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_margin="7dp"                android:layout_weight="1"                android:background="@null"                android:contentDescription="@string/oKobietach"                android:scaleType="fitCenter"                android:src="@drawable/kobiety" />            <TextView                android:layout_width="match_parent"                android:layout_height="match_parent"                android:layout_weight="1"                android:gravity="center_horizontal"                android:text="@string/oKobietach"                android:textColor="#000000" />        </LinearLayout>        <LinearLayout            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:orientation="vertical" >            <ImageButton                android:id="@+id/ofacetach"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_margin="7dp"                android:layout_weight="1"                android:background="@null"                android:contentDescription="@string/oFacetach"                android:scaleType="fitCenter"                android:src="@drawable/ofacetach" />            <TextView                android:layout_width="match_parent"                android:layout_height="match_parent"                android:layout_weight="1"                android:gravity="center_horizontal"                android:text="@string/oFacetach"                android:textColor="#000000" />        </LinearLayout>        <LinearLayout            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:orientation="vertical" >            <ImageButton                android:id="@+id/chuckNorris"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_margin="7dp"                android:layout_weight="1"                android:background="@null"                android:contentDescription="@string/chuckNorris"                android:scaleType="fitCenter"                android:src="@drawable/chuck" />            <TextView                android:layout_width="match_parent"                android:layout_height="match_parent"                android:layout_weight="1"                android:gravity="center_horizontal"                android:text="@string/chuckNorris"                android:textColor="#000000" />        </LinearLayout>    </TableRow>    <TableRow        android:id="@+id/tableRow3"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_weight="0" >        <LinearLayout            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:orientation="vertical" >            <ImageButton                android:id="@+id/chamskie"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_margin="7dp"                android:layout_weight="1"                android:background="@null"                android:contentDescription="@string/chamskie"                android:scaleType="fitCenter"                android:src="@drawable/chamskie" />            <TextView                android:layout_width="match_parent"                android:layout_height="match_parent"                android:layout_weight="1"                android:gravity="center_horizontal"                android:text="@string/chamskie"                android:textColor="#000000" />        </LinearLayout>        <LinearLayout            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:orientation="vertical" >            <ImageButton                android:id="@+id/turboSuchary"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_margin="7dp"                android:layout_weight="1"                android:background="@null"                android:contentDescription="@string/turboSuchary"                android:scaleType="fitCenter"                android:src="@drawable/turbosuchary" />            <TextView                android:layout_width="match_parent"                android:layout_height="match_parent"                android:layout_weight="1"                android:gravity="center_horizontal"                android:text="@string/turboSuchary"                android:textColor="#000000" />        </LinearLayout>        <LinearLayout            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:orientation="vertical" >            <ImageButton                android:id="@+id/zboczone"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_margin="7dp"                android:layout_weight="1"                android:background="@null"                android:contentDescription="@string/zboczone"                android:scaleType="fitCenter"                android:src="@drawable/zboczone" />            <TextView                android:layout_width="match_parent"                android:layout_height="match_parent"                android:layout_weight="1"                android:gravity="center_horizontal"                android:text="@string/zboczone"                android:textColor="#000000" />        </LinearLayout>    </TableRow>    <TableRow        android:id="@+id/tableRow4"        android:layout_width="wrap_content"        android:layout_height="wrap_content" >        <LinearLayout            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:orientation="vertical" >            <ImageButton                android:id="@+id/ulubione"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_marginTop="30dp"                android:layout_weight="1"                android:background="@null"                android:contentDescription="@string/favo"                android:scaleType="fitCenter"                android:src="@drawable/heart" />            <TextView                android:layout_width="match_parent"                android:layout_height="match_parent"                android:layout_weight="1"                android:gravity="center_horizontal"                android:text="@string/fav"                android:textColor="#000000" />        </LinearLayout>        <LinearLayout            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:orientation="vertical" >            <ImageButton                android:id="@+id/losowe"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_marginTop="30dp"                android:layout_weight="1"                android:background="@null"                android:contentDescription="@string/losowe"                android:scaleType="fitCenter"                android:src="@drawable/random" />            <TextView                android:layout_width="match_parent"                android:layout_height="match_parent"                android:layout_weight="1"                android:gravity="center_horizontal"                android:text="@string/losowe"                android:textColor="#000000" />        </LinearLayout>    </TableRow></TableLayout>