<?xml version="1.0" encoding="utf-8"?>
    <android.gesture.GestureOverlayView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/gestures"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:eventsInterceptionEnabled="true"
        android:gestureStrokeType="single"
        android:orientation="vertical" 
        android:gestureStrokeWidth="0.0"
        android:fadeOffset="0"
        android:fadeDuration="0"      
        >
        
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"    
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:background="@drawable/jokerbckg">    
        
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1" >

            <ImageButton
                android:id="@+id/previous"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:src="@drawable/button2"
                android:layout_weight="1"
                android:contentDescription="@string/previ"
                android:background="@null"
                android:scaleType="fitStart" />

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/category"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/category"
                    android:textColor="#000000"
                    android:textSize="20dip" />

                <TextView
                    android:id="@+id/nr"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/nr"
                    android:textColor="#000000" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/next"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:src="@drawable/button1"
                android:layout_weight="1"
                android:contentDescription="@string/previ"
                android:background="@null"
                android:scaleType="fitStart" />
        </LinearLayout>
        
		<TextView
		   		android:id="@+id/joke"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:text="@string/joke" 
                android:gravity="top"
                android:layout_weight="10"
                android:scrollbars="vertical"
                android:textColor="#000000"
                android:textSize="18dip"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip" />

		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="0dip"
		    android:layout_weight="2"
		    android:orientation="horizontal"
		    android:gravity="center" >

			<TextView
			    android:id="@+id/textView2"
			    android:layout_width="0dip"
			    android:layout_height="wrap_content"
			    android:layout_weight="2" />

			<ImageButton
			    android:id="@+id/favourite"
			    android:layout_width="0dip"
			    android:layout_height="wrap_content"
			    android:src="@drawable/favobutton"
			    android:background="@null"
			    android:scaleType="fitStart"
			    android:contentDescription="@string/favo"
			    android:layout_weight="1" />

			<TextView
			    android:id="@+id/textView1"
			    android:layout_width="0dip"
			    android:layout_height="wrap_content"
			    android:layout_weight="2" />

		</LinearLayout>

</LinearLayout></android.gesture.GestureOverlayView>
